# Socket

./: .gitignore  CMakeLists.txt  build.sh  component.cmake  generate.sh  test.sh
inc/: Address.hpp  AddressView.hpp  Endpoint.hpp  InternetProtocol.h  Ipv4Address.hpp  Resolver.hpp  Socket.hpp  TcpSocket.hpp  UdpSocket.hpp  address.hpp
src/: Endpoint.cpp  Ipv4Address.cpp  socket.cpp
test/: CMakeLists.txt  main.cpp  socketTests.cpp
